force-app/main/default/objects/Order/fields/Additional_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Additional_Warranty__c</fullName>
    <label>Additional Warranty</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>