force-app/main/default/objects/Order/fields/Advance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Advance_Amount__c</fullName>
    <description>Advance amount paid by the customer for this Sales Order.</description>
    <label>Advance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>