force-app/main/default/objects/Order/fields/Advance_Received__c.field-meta.xml
<CustomField>
    <fullName>Advance_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the customer has paid the advance amount for this Sales Order.</description>
    <label>Advance Received</label>
    <type>Checkbox</type>
</CustomField>