force-app/main/default/objects/Order/fields/Advance_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Advance_Received_Date__c</fullName>
    <description>Date the customer's advance payment was received.</description>
    <label>Advance Received Date</label>
    <type>Date</type>
</CustomField>