force-app/main/default/objects/Order/fields/Asset_Digital_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Asset_Digital_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset Digital Inventory</label>
    <type>Checkbox</type>
</CustomField>