force-app/main/default/objects/Order/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Name</label>
    <referenceTo>Bank__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>