force-app/main/default/objects/Order/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <label>Billing Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>