force-app/main/default/objects/Order/fields/Breakdown_Support__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Support__c</fullName>
    <label>Breakdown Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>