force-app/main/default/objects/Order/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>Free-text explanation entered by the Sales Executive when cancelling an Order. Included in the Order Cancellation in-app notification.</description>
    <label>Cancellation Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>