force-app/main/default/objects/Order/fields/Contract_Period_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Period_From_Date__c</fullName>
    <label>Contract Period From Date</label>
    <type>Date</type>
</CustomField>