force-app/main/default/objects/Order/fields/ERP_Ack_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Ack_Number__c</fullName>
    <description>Acknowledgment / ERP Order number returned by the ERP system after the Sales Order is synced. Populated by the ERP integration.</description>
    <label>ERP Ack Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>