force-app/main/default/objects/Order/fields/ERP_Acknowledgment_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Acknowledgment_Number__c</fullName>
    <description>Acknowledgment / ERP Order Number returned by ERP (SAP) after a successful sync. Populated by the inbound integration.</description>
    <externalId>true</externalId>
    <label>ERP Acknowledgment Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>