force-app/main/default/objects/Order/fields/ERP_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>ERP_Sync_Date__c</fullName>
    <description>Timestamp of the most recent successful push to ERP.</description>
    <label>ERP Sync Date</label>
    <type>DateTime</type>
</CustomField>