force-app/main/default/objects/Order/fields/Hold_Status__c.field-meta.xml
<CustomField>
    <fullName>Hold_Status__c</fullName>
    <description>Execution state of the Sales Order after PO and advance have been received.</description>
    <label>Hold Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>