force-app/main/default/objects/Order/fields/Insurance_Cost__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Cost__c</fullName>
    <label>Insurance Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>