force-app/main/default/objects/Order/fields/Internal_Transport_Cost__c.field-meta.xml
<CustomField>
    <fullName>Internal_Transport_Cost__c</fullName>
    <label>Internal Transport Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>