force-app/main/default/objects/Order/fields/L1_Approver__c.field-meta.xml
<CustomField>
    <fullName>L1_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Level 1 approver for the Order price approval process (typically the Sales Executive's ASM). Copied from the source Quote at Order creation time.</description>
    <label>L1 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Orders (L1 Approver)</relationshipLabel>
    <relationshipName>Orders_L1Approver</relationshipName>
    <type>Lookup</type>
</CustomField>