force-app/main/default/objects/Order/fields/L2_Approver__c.field-meta.xml
<CustomField>
    <fullName>L2_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Level 2 approver for the Order price approval process (typically the ASM's TSM). Copied from the source Quote at Order creation time.</description>
    <label>L2 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Orders (L2 Approver)</relationshipLabel>
    <relationshipName>Orders_L2Approver</relationshipName>
    <type>Lookup</type>
</CustomField>