force-app/main/default/objects/Order/fields/L3_Approver__c.field-meta.xml
<CustomField>
    <fullName>L3_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Level 3 approver for the Order price approval process (typically Order Acceptance / Finance Manager). Copied from the source Quote at Order creation time.</description>
    <label>L3 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Orders (L3 Approver)</relationshipLabel>
    <relationshipName>Orders_L3Approver</relationshipName>
    <type>Lookup</type>
</CustomField>