force-app/main/default/objects/Order/fields/Number_of_Preventive_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Preventive_Maintenance__c</fullName>
    <label>Number of Preventive Maintenance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
                <default>true</default>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>