force-app/main/default/objects/Order/fields/Order_Approved_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Order_Approved_Date_Time__c</fullName>
    <description>Stamped to NOW() by the Order_Approved_Date_Time workflow field update, invoked from the Order_Approval approval process final-approval action.</description>
    <label>Order Approved Date Time</label>
    <type>DateTime</type>
</CustomField>