force-app/main/default/objects/Order/fields/Packing_Charge__c.field-meta.xml
<CustomField>
    <fullName>Packing_Charge__c</fullName>
    <label>Packing Charge</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>