force-app/main/default/objects/Order/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description>Payment Terms snapshotted from the source Quote at Sales Order creation. Read-only on the Order; maintained on the Quote's Payment_Term__c child records.</description>
    <label>Payment Terms</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>