force-app/main/default/objects/Order/fields/PO_Received__c.field-meta.xml
<CustomField>
    <fullName>PO_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the customer's Purchase Order has been received for this Sales Order.</description>
    <label>PO Received</label>
    <type>Checkbox</type>
</CustomField>