force-app/main/default/objects/Order/fields/Promotional_Cost__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Cost__c</fullName>
    <label>Promotional Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>