force-app/main/default/objects/Order/fields/Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Id__c</fullName>
    <displayFormat>QT-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Quote Id</label>
    <type>AutoNumber</type>
</CustomField>