force-app/main/default/objects/Order/fields/Quote_Valid_Till_in_days__c.field-meta.xml
<CustomField>
    <fullName>Quote_Valid_Till_in_days__c</fullName>
    <label>Quote Valid Till (in days)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
                <default>true</default>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>