force-app/main/default/objects/Order/fields/Reason_for_Revision__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Revision__c</fullName>
    <label>Reason for Revision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>