force-app/main/default/objects/Order/fields/Renewable_Up_To__c.field-meta.xml
<CustomField>
    <fullName>Renewable_Up_To__c</fullName>
    <label>Renewable Up To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
            <value>
                <fullName>3 Years</fullName>
            </value>
            <value>
                <fullName>5 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>