force-app/main/default/objects/Order/fields/Revised_Date__c.field-meta.xml
<CustomField>
    <fullName>Revised_Date__c</fullName>
    <label>Revised Date</label>
    <type>Date</type>
</CustomField>