force-app/main/default/objects/Order/fields/Revised_Quote__c.field-meta.xml
<CustomField>
    <fullName>Revised_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revised Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Orders (Revised Quote)</relationshipLabel>
    <relationshipName>Orders_Revised_Quote</relationshipName>
    <type>Lookup</type>
</CustomField>