force-app/main/default/objects/Order/fields/SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code__c</fullName>
    <description>SAP order / document code returned by SAP after sync.</description>
    <label>SAP Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>