force-app/main/default/objects/Order/fields/Shipping_Mode__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Mode__c</fullName>
    <label>Shipping Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By Road</fullName>
            </value>
            <value>
                <fullName>By Air</fullName>
            </value>
            <value>
                <fullName>By Sea</fullName>
            </value>
            <value>
                <fullName>By Rail</fullName>
            </value>
            <value>
                <fullName>Courier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>