force-app/main/default/objects/Order/fields/Sync_To_SAP__c.field-meta.xml
<CustomField>
    <fullName>Sync_To_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this Order for synchronization to SAP.</description>
    <label>Sync To SAP</label>
    <type>Checkbox</type>
</CustomField>