force-app/main/default/objects/Order/fields/Traning_Cost__c.field-meta.xml
<CustomField>
    <fullName>Traning_Cost__c</fullName>
    <label>Traning Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>