force-app/main/default/objects/Order/fields/User_TraIning_Required__c.field-meta.xml
<CustomField>
    <fullName>User_TraIning_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User TraIning Required</label>
    <type>Checkbox</type>
</CustomField>