force-app/main/default/objects/Order/fields/Version_Nmber__c.field-meta.xml
<CustomField>
    <fullName>Version_Nmber__c</fullName>
    <label>Version Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>