force-app/main/default/objects/Order/fields/Warrantee_Cost__c.field-meta.xml
<CustomField>
    <fullName>Warrantee_Cost__c</fullName>
    <label>Warrantee Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>