force-app/main/default/objects/Order/fields/Yearly_Calibration__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Calibration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yearly Calibration</label>
    <type>Checkbox</type>
</CustomField>